performance improvements, fixes compositing glitches on iOS safari

--- a/src/3D.css
+++ b/src/3D.css
@@ -1,13 +1,11 @@
-/*body{*/
-    /*!*background:#f5f5f5;*!*/
-/*}*/
-
 :root {
     --cube-size: 8em;
     --cube-size-half: 4em;
 }
 
 .board-3D {
+    /* fixes compositing issue on iOS safari*/
+    z-index: 100;
     perspective:1700px;
     perspective-origin: 50% 0%;
     transform-style:preserve-3d;
@@ -47,6 +45,10 @@
     transform-style:preserve-3d;
     /*transform: translate3d(0em, 0em, 0em) rotateY(30deg);*/
     /*transition:200ms ease-in;*/
+}
+
+.tile3D-placeholder .tile3D {
+    /*transform: scale3d(0.95, .95, .95) translate3d(1px, 1px, 2px)*/
 }
 
 .board-3D .tile.tile-100 .tile-inner span {
